# Dev_Api_Vault

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  build.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_old.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
app/: __init__.py  config.py  main.py  middleware.py  models.py  openapi.py  routers.py  security.py  utils.py
assets/demo/: DEMO.md
docs/: README.md
tests/: conftest.py  test_api.py  test_edge_cases.py
