[tool.poetry]
name = "dev-api-vault"
version = "1.0.0"
description = "A comprehensive collection of developer utilities API"
authors = ["Krunal Valvi <krunalvalvi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = "^1.10.5"
python-multipart = "^0.0.6"
markdown = "^3.4.1"
qrcode = "^7.4.2"
Pillow = "^9.5.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
nltk = "^3.8.1"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = [
    "**/__pycache__/*",
    "**/tests/*",
    "**/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[metadata]
name = "dev-api-vault"
version = "1.0.0"
description = "A comprehensive collection of developer utilities API"
author = "Krunal Valvi"
author_email = "krunalvalvi@gmail.com"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
